[gd_scene load_steps=38 format=3 uid="uid://bs4smsy55hko8"]

[ext_resource type="Script" uid="uid://bdkj7q86owp76" path="res://Scripts/controls/select_buttons.gd" id="1_142kj"]
[ext_resource type="Shader" uid="uid://boe0wjvaejh70" path="res://shaders/infinite_background.gdshader" id="2_t7jdn"]
[ext_resource type="Texture2D" uid="uid://c83ft2lnt64rk" path="res://Sprite/blocks/arcade_2.png" id="3_kn8xg"]
[ext_resource type="Script" uid="uid://ddsxp1cmntv2p" path="res://Scripts/others/apply_parametrs.gd" id="4_agdcg"]
[ext_resource type="Texture2D" uid="uid://clha4utkwv3gq" path="res://Sprite/blocks/arcade_3.png" id="5_agdcg"]
[ext_resource type="Texture2D" uid="uid://cgdmxeiv2kjts" path="res://Sprite/blocks/arcade_4.png" id="6_4mert"]
[ext_resource type="Texture2D" uid="uid://dp8vx0f4o67dj" path="res://Sprite/blocks/arcade_6.png" id="7_6wrke"]
[ext_resource type="Texture2D" uid="uid://23jci8gtsbl0" path="res://Sprite/blocks/arcade_8.png" id="9_rkttt"]
[ext_resource type="Texture2D" uid="uid://b8l30mr8wfjvb" path="res://Sprite/blocks/arcade_7.png" id="10_dmawm"]
[ext_resource type="AudioStream" uid="uid://dpfjtspnny4h3" path="res://sounds/sfx_sounds/choose_button.mp3" id="11_b7kbi"]
[ext_resource type="AudioStream" uid="uid://cqqt684basnci" path="res://sounds/sfx_sounds/gameoverend-pixel.mp3" id="12_q3n33"]
[ext_resource type="PackedScene" uid="uid://bw3j7q1iq8ac6" path="res://Scenes/controls/settings_panel.tscn" id="13_kn8xg"]
[ext_resource type="PackedScene" uid="uid://5iw18wp87qms" path="res://Scenes/controls/select_buttons.tscn" id="13_pkjmx"]
[ext_resource type="Script" uid="uid://bk3x8k5hbb5mm" path="res://Scripts/others/discl.gd" id="14_8jelv"]
[ext_resource type="AudioStream" uid="uid://bj7gyji8iabcg" path="res://sounds/sfx_sounds/press_menu.mp3" id="15_tm0oo"]
[ext_resource type="Script" uid="uid://blucshfm07smm" path="res://Scripts/others/load.gd" id="17_gw1uy"]
[ext_resource type="Texture2D" uid="uid://coc82yl3pf286" path="res://Sprite/blocks/arcade_9.png" id="17_kn8xg"]
[ext_resource type="Texture2D" uid="uid://38ptxqmv70v3" path="res://others/for builds programm/icons/icon.svg" id="18_kdlci"]
[ext_resource type="Shader" uid="uid://najw42ejm8q3" path="res://shaders/mask_texture.gdshader" id="19_4mert"]
[ext_resource type="PackedScene" uid="uid://cxf4k7o2x66yv" path="res://Scenes/effects/animation_collision.tscn" id="19_7h5f3"]
[ext_resource type="Texture2D" uid="uid://dloc5atusakfd" path="res://Sprite/blocks/arcade_1.png" id="19_t7jdn"]
[ext_resource type="Texture2D" uid="uid://b8tnhml2jcl3s" path="res://Sprite/others/logo_intro.png" id="20_6wrke"]
[ext_resource type="Texture2D" uid="uid://bsup8rbdvti7y" path="res://Sprite/blocks/arcade_5.png" id="20_agdcg"]
[ext_resource type="AudioStream" uid="uid://d2utelofy7ng6" path="res://sounds/musics/menu/Pulse.mp3" id="20_hxwn2"]
[ext_resource type="AudioStream" uid="uid://b1ll4vjjwjuan" path="res://sounds/sfx_sounds/bong.mp3" id="23_6wrke"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6swd7"]
shader = ExtResource("2_t7jdn")
shader_parameter/speed = 1.0
shader_parameter/vertical_scroll_speed = 0.0
shader_parameter/horizontal_scroll_speed = -0.5
shader_parameter/random_direction_change = 0.0
shader_parameter/direction_change_cooldown = 5.0
shader_parameter/bulge_intensity = 0.0
shader_parameter/wave_distortion = 0.0
shader_parameter/glitch_duration = 2.0
shader_parameter/glitch_cooldown = 10.0
shader_parameter/glitch_power = 0.05
shader_parameter/hue_shift_speed = 0.3
shader_parameter/blood_intensity = 0.0
shader_parameter/texture_scale = 0.01
shader_parameter/color_tint = Vector3(1, 1, 1)
shader_parameter/color_saturation = 1.0
shader_parameter/color_brightness = 1.0

[sub_resource type="Animation" id="Animation_q3rjx"]
resource_name = "start"
length = 2.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_agdcg"), ExtResource("6_4mert"), ExtResource("10_dmawm"), ExtResource("3_kn8xg"), ExtResource("9_rkttt"), ExtResource("5_agdcg"), ExtResource("7_6wrke"), ExtResource("5_agdcg"), ExtResource("3_kn8xg"), ExtResource("6_4mert"), ExtResource("5_agdcg"), ExtResource("6_4mert"), ExtResource("10_dmawm"), ExtResource("3_kn8xg"), ExtResource("9_rkttt"), ExtResource("5_agdcg"), ExtResource("7_6wrke"), ExtResource("5_agdcg"), ExtResource("3_kn8xg"), ExtResource("6_4mert"), ExtResource("10_dmawm")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../sound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("12_q3n33")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7qvly"]
_data = {
&"start": SubResource("Animation_q3rjx")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_158mb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jsrd8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wbdvm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_agdcg"]
shader = ExtResource("2_t7jdn")
shader_parameter/speed = 1.0
shader_parameter/vertical_scroll_speed = 1.0
shader_parameter/horizontal_scroll_speed = 0.0
shader_parameter/random_direction_change = 0.0
shader_parameter/direction_change_cooldown = 0.0
shader_parameter/bulge_intensity = 0.0
shader_parameter/wave_distortion = 0.0
shader_parameter/glitch_duration = 0.0
shader_parameter/glitch_cooldown = 0.0
shader_parameter/glitch_power = 0.0
shader_parameter/hue_shift_speed = 0.0
shader_parameter/blood_intensity = 0.0
shader_parameter/texture_scale = 0.01
shader_parameter/color_tint = Vector3(1, 1, 1)
shader_parameter/color_saturation = 1.0
shader_parameter/color_brightness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qfqml"]
shader = ExtResource("2_t7jdn")
shader_parameter/speed = 0.5
shader_parameter/vertical_scroll_speed = 0.0
shader_parameter/horizontal_scroll_speed = 0.0
shader_parameter/random_direction_change = 0.0
shader_parameter/direction_change_cooldown = 5.0
shader_parameter/bulge_intensity = 0.0
shader_parameter/wave_distortion = 0.0
shader_parameter/glitch_duration = 0.0
shader_parameter/glitch_cooldown = 0.0
shader_parameter/glitch_power = 0.0
shader_parameter/hue_shift_speed = 0.0
shader_parameter/blood_intensity = 0.0
shader_parameter/texture_scale = 1.0
shader_parameter/color_tint = Vector3(1, 1, 1)
shader_parameter/color_saturation = 1.0
shader_parameter/color_brightness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rkttt"]
shader = ExtResource("19_4mert")
shader_parameter/mask_texture = ExtResource("6_4mert")
shader_parameter/speed = 1.0
shader_parameter/intensity = 0.0
shader_parameter/amplitude_x = 0.5
shader_parameter/amplitude_y = 0.5

[sub_resource type="Animation" id="Animation_t7jdn"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("icon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("icon:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("18_kdlci")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("icon:material:shader_parameter/horizontal_scroll_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("icon/logo:material:shader_parameter/mask_texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_4mert")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("background_load:material:shader_parameter/vertical_scroll_speed")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_kn8xg"]
resource_name = "intro"
length = 8.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-300, -0.07777778, -46.666668, 0.061111115, 36.666668, -300, -0.25, 0, 0.25, 0, 300, -0.25, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.4, 1.2333333)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0, 0.1, -0.072222225, 0, 0, 0, 0, -0.2611111, 0, 0, 0),
"times": PackedFloat32Array(0, 2.2333333, 2.4666667)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("icon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3, 3.6333334),
"transitions": PackedFloat32Array(1, 0.086869955, 0.077280596),
"update": 0,
"values": [Vector2(2, 2), Vector2(2, 2), Vector2(3, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("icon:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6, 4.766667, 4.9333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_agdcg"), ExtResource("10_dmawm"), ExtResource("6_4mert"), ExtResource("3_kn8xg"), ExtResource("5_agdcg"), ExtResource("9_rkttt"), ExtResource("19_t7jdn"), ExtResource("20_agdcg"), ExtResource("19_t7jdn"), ExtResource("5_agdcg"), ExtResource("10_dmawm"), ExtResource("3_kn8xg")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("icon:material:shader_parameter/horizontal_scroll_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1.0352031),
"update": 1,
"values": [0.0, 2.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("icon/logo:material:shader_parameter/mask_texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3, 3.2, 3.4, 3.6, 3.8, 4.0333333, 4.2, 4.4, 4.6, 4.766667, 4.9333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_4mert"), ExtResource("6_4mert"), ExtResource("10_dmawm"), ExtResource("5_agdcg"), ExtResource("3_kn8xg"), ExtResource("19_t7jdn"), ExtResource("9_rkttt"), ExtResource("7_6wrke"), ExtResource("9_rkttt"), ExtResource("6_4mert"), ExtResource("3_kn8xg"), ExtResource("10_dmawm")]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../../CanvasLayer/sound")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("23_6wrke")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("12_q3n33")
}],
"times": PackedFloat32Array(2.1666667, 2.9666667)
}
tracks/6/use_blend = true
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("background_load:material:shader_parameter/vertical_scroll_speed")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2.3, 3.0333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1.0, 0.0, 8.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_agdcg"]
_data = {
&"RESET": SubResource("Animation_t7jdn"),
&"intro": SubResource("Animation_kn8xg")
}

[node name="menu" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="background" type="TextureRect" parent="CanvasLayer/menu"]
material = SubResource("ShaderMaterial_6swd7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_agdcg")
stretch_mode = 1
script = ExtResource("4_agdcg")
metadata/_edit_use_anchors_ = true

[node name="background_animation" type="AnimationPlayer" parent="CanvasLayer/menu/background"]
libraries = {
&"": SubResource("AnimationLibrary_7qvly")
}

[node name="main_menu" type="Control" parent="CanvasLayer/menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_142kj")
metadata/_edit_use_anchors_ = true

[node name="play" type="Button" parent="CanvasLayer/menu/main_menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3627451
anchor_top = 0.37916666
anchor_right = 0.6372549
anchor_bottom = 0.46666667
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_158mb")
text = "начать игру"
flat = true
metadata/_edit_use_anchors_ = true

[node name="chapters" type="Button" parent="CanvasLayer/menu/main_menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3348039
anchor_top = 0.45625
anchor_right = 0.66519606
anchor_bottom = 0.54375
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_158mb")
text = "выбрать главу"
flat = true
metadata/_edit_use_anchors_ = true

[node name="settings" type="Button" parent="CanvasLayer/menu/main_menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.37745097
anchor_top = 0.53333336
anchor_right = 0.62352943
anchor_bottom = 0.62083334
offset_top = -3.0517578e-05
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_jsrd8")
text = "настройки"
flat = true
metadata/_edit_use_anchors_ = true

[node name="exit" type="Button" parent="CanvasLayer/menu/main_menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.42647058
anchor_top = 0.61527777
anchor_right = 0.5735294
anchor_bottom = 0.70416665
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_wbdvm")
text = "выйти"
flat = true
metadata/_edit_use_anchors_ = true

[node name="main_chapters" type="Control" parent="CanvasLayer/menu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_142kj")
metadata/_edit_use_anchors_ = true

[node name="chapter_1" type="Button" parent="CanvasLayer/menu/main_chapters"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -88.0
offset_right = 84.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_wbdvm")
text = "глава 1"
flat = true

[node name="chapter_2" type="Button" parent="CanvasLayer/menu/main_chapters"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -31.5
offset_right = 89.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_wbdvm")
text = "глава 2"
flat = true

[node name="chapter_3" type="Button" parent="CanvasLayer/menu/main_chapters"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 28.0
offset_right = 90.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_wbdvm")
text = "глава 3"
flat = true

[node name="main_settings" parent="CanvasLayer/menu" instance=ExtResource("13_kn8xg")]
visible = false

[node name="name" type="Label" parent="CanvasLayer/menu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "The World of void"
horizontal_alignment = 1
vertical_alignment = 2

[node name="choose_button" type="AudioStreamPlayer" parent="CanvasLayer/menu"]
stream = ExtResource("11_b7kbi")

[node name="sound" type="AudioStreamPlayer" parent="CanvasLayer"]
volume_db = 5.0

[node name="select_buttons" parent="." instance=ExtResource("13_pkjmx")]
layer = 11

[node name="discl" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("14_8jelv")

[node name="background" type="ColorRect" parent="discl"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 1, 1)

[node name="press" type="Label" parent="discl"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "test message"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PLAY" type="Label" parent="discl"]
anchors_preset = -1
anchor_left = 0.071
anchor_top = 0.054
anchor_right = 0.342
anchor_bottom = 0.146
offset_left = -0.120003
offset_top = 0.119999
offset_right = -0.240005
offset_bottom = -0.12001
theme_override_font_sizes/font_size = 60
text = "PLAY >"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="baclground music press" type="AudioStreamPlayer" parent="discl"]
stream = ExtResource("15_tm0oo")
parameters/looping = true

[node name="button_press" type="AudioStreamPlayer" parent="discl"]
stream = ExtResource("11_b7kbi")

[node name="load" type="CanvasLayer" parent="."]
layer = 5
script = ExtResource("17_gw1uy")

[node name="Control" type="Control" parent="load"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="background_load" type="TextureRect" parent="load/Control"]
material = SubResource("ShaderMaterial_agdcg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_kn8xg")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="icon" type="TextureRect" parent="load/Control"]
material = SubResource("ShaderMaterial_qfqml")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -360.0
offset_right = 64.0
offset_bottom = -232.00073
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(65, 65)
texture = ExtResource("18_kdlci")
expand_mode = 1

[node name="logo" type="TextureRect" parent="load/Control/icon"]
material = SubResource("ShaderMaterial_rkttt")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0000038
offset_top = 0.00048828125
offset_bottom = -0.00048828125
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_6wrke")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="load/Control"]
libraries = {
&"": SubResource("AnimationLibrary_agdcg")
}

[node name="animation_collision" parent="." instance=ExtResource("19_7h5f3")]
layer = 9

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_hxwn2")
mix_target = 2
parameters/looping = true
